correction sur intitulé de exercice

--- a/[integration]hinterlandgames.com/index.html
+++ b/[integration]hinterlandgames.com/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <!-- Il manque un certain nmbre de meta, à vous de voir lesquels -->
+    <!-- Il manque un certain nombre de meta, à vous de les rajouter -->
     <title>Cadavre Exquis</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <!-- Chargez à la suite les fichiers des framework dont vous avez besoin ( jQuery, Bootstrap... ) -->
+
     <link rel="stylesheet" href="css/style.css">
-    <!-- Chargez à la suite les fichiers des framework dont vous avez besoin -->
   </head>
   <body>
+    <p id="consignes">Les consignes --> <a href="https://github.com/Ma6Tvacoder-Docs/ExercicesHTML/blob/master/%5Bintegration%5Dhinterlandgames.com/Consignes/CadavreExquis.md#1-2-3-que-faire">ici</a></p>
     <!-- Implementez dans le header tout ce qui concerne la nav et le content-nav -->
     <header>
 
     </header>
-
     <!-- Dans cette section on va mettre en place le slider et son contenus -->
     <section>
 
     </section>
-
     <!-- Dans cette section se trouve tout ce qui concerne le contenus de la page -->
     <section>
+
     </section>
     <!-- bient prendre en comptes tous les elements present dans le footer en faisant le tour des pages. -->
     <footer>
+      <!-- vos scripts -->
       <script src="js/script.js"></script>
     </footer>
   </body>
