amendement de la maquette sur bootstrap

--- a/[integration]hinterlandgames.com/index.html
+++ b/[integration]hinterlandgames.com/index.html
@@ -1,31 +1,41 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="fr">
   <head>
-    <!-- Il manque un certain nombre de meta, à vous de les rajouter -->
+    <meta charset="utf-8">
     <title>Cadavre Exquis</title>
+    <!-- Les Frameworks -->
     <link rel="stylesheet" href="css/reset.css">
-    <!-- Chargez à la suite les fichiers des framework dont vous avez besoin ( jQuery, Bootstrap... ) -->
-
+    <link rel="stylesheet" href="elements/Frameworks/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="elements/Frameworks/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <script type="text/javascript" src="elements/Frameworks/jQuery/jquery-3.1.1.min.js"></script>
+    <script type="text/javascript" src="elements/Frameworks/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <!-- Feuilles de style perso -->
     <link rel="stylesheet" href="css/style.css">
   </head>
-  <body>
-    <p id="consignes">Les consignes --> <a href="https://github.com/Ma6Tvacoder-Docs/ExercicesHTML/blob/master/%5Bintegration%5Dhinterlandgames.com/Consignes/CadavreExquis.md#1-2-3-que-faire">ici</a></p>
-    <!-- Implementez dans le header tout ce qui concerne la nav et le content-nav -->
+  <body class="container-fluid">
     <header>
-
+      <nav class="menu">
+        <ul>
+          <li class="col-sm-7"><a href="#"><img src="elements/img/hinterland-logo.svg" alt="logo Hinterland"></a></li>
+          <li class="col-sm-5 higthLink textC borderSide">menu<i class="fa fa-bars" aria-hidden="true"></i></li>
+          <li class="col-sm-6 titleLink-sm">
+            <ul class="textC">
+              <li class="hidden-sm titleLink-sm borderSide"><a href="#">studio<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+              <li class="col-sm-8 titleLink-sm"><a href="#">english<i class="fa fa-angle-down" aria-hidden="true"></i></a></li>
+              <li class="col-sm-4 titleLink-sm borderSide"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+            </ul>
+          </li>
+          <li class="col-sm-6 textC">
+            <ul>
+              <li class="hidden-sm titleLink-sm"><a href="#">the long dark<i class="fa fa-angle-double-right" aria-hidden="true"></i></a></li>
+              <li class="col-sm-4 titleLink-sm borderSide"><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+              <li class="col-sm-4 titleLink-sm borderSide"><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+              <li class="col-sm-4 titleLink-sm borderSide"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
     </header>
-    <!-- Dans cette section on va mettre en place le slider et son contenus -->
-    <section>
 
-    </section>
-    <!-- Dans cette section se trouve tout ce qui concerne le contenus de la page -->
-    <section>
-
-    </section>
-    <!-- bient prendre en comptes tous les elements present dans le footer en faisant le tour des pages. -->
-    <footer>
-      <!-- vos scripts -->
-      <script src="js/script.js"></script>
-    </footer>
   </body>
 </html>
