update des fichiers en local

--- a/[integration]hinterlandgames.com/index.html
+++ b/[integration]hinterlandgames.com/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="elements/Frameworks/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="elements/Frameworks/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="elements/Frameworks/OwlCarousel2-2.2.0/dist/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="elements/Frameworks/OwlCarousel2-2.2.0/dist/assets/owl.theme.default.min.css">
+
     <script type="text/javascript" src="elements/Frameworks/jQuery/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="elements/Frameworks/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="elements/Frameworks/OwlCarousel2-2.2.0/dist/owl.carousel.min.js"></script>
 
     <!-- Feuilles de style perso -->
     <link rel="stylesheet" href="css/style.css">
@@ -37,6 +41,20 @@
         </ul>
       </nav>
     </header>
+    <!-- Set up your HTML carousel-->
+    <section id="carousel">
+      <div class="owl-carousel">
+        <div>
+          <img src="elements/img/HomePageSlideTLD1150x500-1150x500.jpg" alt="Slide The long Dark">
+        </div>
+        <div>
+          <img src="elements/img/HLGSlider_Community-1160x500.jpg" alt="Slide Hile Games">
+        </div>
+      </div>
+    </section>
+    <footer>
+      <script type="text/javascript" src="js/script.js"> </script>
 
+    </footer>
   </body>
 </html>
