ajout test en HTML background

--- a/[integration]hinterlandgames.com/index.html
+++ b/[integration]hinterlandgames.com/index.html
@@ -53,8 +53,8 @@
       </div>
     </section>
     <footer>
-      <script type="text/javascript" src="js/script.js"> </script>
-
+      <!-- ici on charge les scripts maison -->
+      <script type="text/javascript" src="js/script.js"></script>
     </footer>
   </body>
 </html>
