--- a/CasPratiques/00-Commencer_Html/index01.html
+++ b/CasPratiques/00-Commencer_Html/index01.html
@@ -5,15 +5,22 @@
     <title>Index de demo</title>
   </head>
   <body>
+    <!-- connaissances abordés -> readme.md -->
     <style media="screen">
+
       header{
         background-color: #B71C1C;
         margin:50px 25px 10px 15px;
         text-align: center;
       }
+
       section{
         background-color: #F44336;
       }
+      section div{
+        padding-bottom: 18%;
+      }
+
       img{
         width:50%;
         height:auto;
@@ -29,10 +36,9 @@
         width: 32%;
         /*display: block;*/
       }
-      section div{
-        padding-bottom: 18%;
-      }
-      /* Experimentation sur la selection avec pseudos selecteurs --> nth-of-type() / first-of-type / last-of-type
+
+      /* Si vous souhaitez experimentation sur la selection
+      avec pseudos selecteurs --> :nth-of-type() / :first-of-type / :last-of-type
       div img:first-of-type{
         width: 100%;
       }
@@ -50,6 +56,7 @@
         color:white;
         padding-bottom: 70%;
       }
+
       h2{
         color:black;
         padding-left: 5%;
@@ -57,20 +64,19 @@
         text-transform: uppercase;
         font-family: monospace;
         font-size: 25px;
-
       }
       article h2{
         color:#9C27B0;
       }
+
       p{
         padding-left: 15px;
       }
+
     </style>
     <header>
       <h1>Titre principal</h1>
       <img src="img/logoThink.jpg" alt="">
-      <nav>
-      </nav>
     </header>
     <section>
       <div class="">
