--- a/CasPratiques/00-Commencer_Html/index01.html
+++ b/CasPratiques/00-Commencer_Html/index01.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Index de demo</title>
+    <title>Index de démo</title>
   </head>
   <body>
-    <!-- connaissances abordés -> readme.md -->
+    <!-- connaissances abordées -> readme.md -->
     <style media="screen">
 
       header{
@@ -37,7 +37,7 @@
         /*display: block;*/
       }
 
-      /* Si vous souhaitez experimentation sur la selection
+      /* Si vous souhaitez experimenter sur la selection
       avec pseudos selecteurs --> :nth-of-type() / :first-of-type / :last-of-type
       div img:first-of-type{
         width: 100%;
