ajout des derniers fichiers ce soir restaurant

--- a/CasPratiques/03-restaurant/integration/index.html
+++ b/CasPratiques/03-restaurant/integration/index.html
@@ -7,7 +7,10 @@
   </head>
   <body>
     <header>
-      <h1 class="inlineB">Ce soir</h1>
+      <div id="logoResto">
+        <h1 class="inlineB">C<span>e</span>  soir</h1>
+        <hr class="rectangle">
+      </div>
       <nav class="inlineB">
         <ul>
           <li class="inlineB">Our story</li>
@@ -24,14 +27,36 @@
     </header>
     <section>
       <section id="story">
-        <article class="">
-          <h2></h2>
+        <article class="pBloque-left">
+          <h2>Our Story</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <hr>
+        </article><!--
+        --><div class="pBloque-right">
+          <!-- <img src="img/asperge.jpg" alt=""> -->
+        </div>
+      </section>
+      <section id="soap">
+        <div class="pBloque-right">
+          <img src="img/soap.jpg" alt="">
+        </div><!--
+        --><article class="pBloque-left">
+          <h2>Fresh Fare</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </article>
-        <div class="">
-          <img src="img/asperge.jpg" alt="">
+      </section>
+      <section id="local">
+        <article class="pBloque-left">
+          <h2>Fresh Fare</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </article><!--
+        --><div class="pBloque-right">
+          <img src="img/moule.jpg" alt="">
         </div>
       </section>
     </section>
+    <footer>
+
+    </footer>
   </body>
 </html>
